# pet

./: .env  .gitmodules  CMakeLists.txt  ChangeLog  Dockerfile.template  Makefile.am  README  README.md  clang_compatibility.h  configure.ac  debug_hooks.c  debug_hooks.h  docker-compose.yml  id.cc  main.c  pet.cc  pet_check_code.c  pet_codegen.c  pet_loopback.c  pet_scop_cmp.c  print.c  scan.cc  scan.h  scop.c  version.cc
cmake/: CheckClangFeatures.cmake  FindLLVMClang.cmake  FindLibYAML.cmake  config.h.in
m4/: ax_detect_clang.m4
tests/: call10.c  call10.scop  call9.c  call9.scop
tests/autodetect/: list.c  list.scop
